<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_purchase"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/purchases"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_message"
        android:enabled="true"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/message"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

</menu>