<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="LOGIN"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imageView_userIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_user"
                    android:tint="@color/white" />

                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView_userIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imageView_userIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/email"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imageView_passwordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white" />

                <EditText
                    android:id="@+id/ed_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView_passwordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imageView_passwordIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txt_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_below="@id/relativeLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="@color/greyColor"
                android:textSize="12sp"/>



            <Button
                android:id="@+id/button_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_forget"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_in"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/button_signin"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:layerType="software"
                android:src="@drawable/dash" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/or_login_with"
                android:textColor="@color/greyColor"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/facebookBlue"
                    android:padding="10dp"
                    android:src="@drawable/img_facebook" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/twitterBlue"
                    android:padding="10dp"
                    android:src="@drawable/img_twitter" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/googleRed"
                    android:padding="10dp"
                    android:src="@drawable/img_googleplus" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/not_yet" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>