<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">


    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleTextAppearance="@android:color/transparent"
                android:fitsSystemWindows="true"
                >

                <ImageView
                    android:id="@+id/name_of_image"
                    app:layout_collapseMode="parallax"
                    android:src="@drawable/cover"
                    android:contentDescription="@string/name"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="350dp" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    android:title="@string/name"
                    app:layout_collapseMode="pin"
                    >
                </android.support.v7.widget.Toolbar>


            </android.support.design.widget.CollapsingToolbarLayout>



        </android.support.design.widget.AppBarLayout>


            <android.support.v4.widget.NestedScrollView
                android:id="@+id/nsv"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_gravity="fill_vertical"
                android:layout_marginBottom="?attr/actionBarSize"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="100">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="5"
                            android:src="@drawable/ic_phone_black_24dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:layout_weight="75"
                            android:orientation="vertical">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:counterEnabled="true"
                                app:hintTextAppearance="@style/MyHintText">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/edTextPhone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:focusable="false"
                                    android:hint="example: 8-960-8499-726"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white" />
                            </android.support.design.widget.TextInputLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:text="@string/phone"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/imageEdit1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="20"
                            android:src="@drawable/ic_mode_edit_black_24dp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="7dp"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="5"
                            android:src="@drawable/ic_email_black_24dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:layout_weight="75"
                            android:orientation="vertical">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:counterEnabled="true"
                                app:hintTextAppearance="@style/MyHintText">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/edTextEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="sporikn25@yandex.ru"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white" />
                            </android.support.design.widget.TextInputLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/imageEdit2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="20"
                            android:src="@drawable/ic_mode_edit_black_24dp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="7dp"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="5"
                            android:src="@drawable/ic_comment_black_24dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:layout_weight="75"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/getComments"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:text="@string/getComments"
                                android:textColor="@color/white"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/giveComments"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:text="@string/giveComments"
                                android:textColor="@color/white"
                                android:textSize="15sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="7dp"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/text_exit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/exit"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/doPhoto"
            android:src="@drawable/ic_photo_camera_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|right|end"
            />

    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>
